--- a/index.html
+++ b/index.html
@@ -3,8 +3,109 @@
 <head>
 	<title>IEEE Kerala section Wie Newsletter</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 <body>
-	<h1>Hello world</h1>
+
+	
+
+	<div class="coverContainer">
+</div>
+
+
+
+	<section class="adjusttop">
+		<div id="container" class="container">
+			<h1 class="display-4">WIE team</h1>
+			<div class="und" style="margin-bottom: 10px">
+				<div class="ind"></div>
+			</div>
+			<img class="center" src="Images/WieTeam.png" width="500px" height="500px">
+		</div>	
+	</section>
+
+
+	<section class="adjusttop">
+		<div id="container" class="container">
+			<h1 class="display-4">IEEE LINK</h1>
+			<div class="und" style="margin-bottom: 10px">
+				<div class="ind"></div>
+			</div>
+			<h4>WiE Colloquium Phase</h4>
+			<h3>Date: 30th April - 9th May, 2020</h3>
+			<h4>No. of Participants: 300+</h4>
+			<p>WiE Colloquium is a program focusing on WiE AG members (female engineering aspirants) to surge and update the technical knowledge. It is a panel discussion with 2 phases of which at the ﬁrst phase all WiE AGs are divided into 9 groups and are given the pillars of Industry 4.0 . The second phase will be on the topic Industry 4.0 coordinated by IEEE LINK as the ﬁnal event of WiE Colloquium. Grouping of WiE AGs was conducted from 22nd-24th April 2020. Phase 1 started on 28th April 2020, under the supervision of YPs from WiE, phase 1 was successfully completed on 9th May 2020. Best panelist from each of the 9 topics is selected for Phase 2 execution.</p>
+			<p>WIE Colloquium has catered to bringing together a vast community of technically
+			technological development under their wings. The primary aim of the event was empowered women who have embraced innovation and shortlisted ideas for too engage female engineering aspirants in technical discussions on the latest developments. The enthusiasm and participation that the event inspired demonstrated that student culture at IEEE. The other outcomes of this event are.. backbone for the less active WIE AGs of a few Student Branche</p>
+			<p>We believe that this event has ignited many young minds with the latest techs and trends and have given a proper insight to the pillars of Industry 4.0</p>
+			<hr class="style-two">
+		</div>	
+	</section>
+
+
+
+	<section class="adjusttop">
+		<div id="container" class="container">
+			<h4>WiE Learn</h4>
+			<h5>Date: 5th April - 23rd October,2020</h5>
+			<h4>No. of Participants: 125</h4>
+			<p>WiE Learn is an online mentorship programming, exclusively for female engineering as pirants across engineering colleges in Kerala. The mentorship program is open for all registered students. WIE Learn provides two main domains:</p>
+			<ol>
+				<li>Android App development using Android Studio</li>
+				<li>Full Stack Raspberry</li>
+			</ol>
+			<p>Teams of ﬁve were eligible to apply for the course and a total of 25 teams(Total 125 students) were shortlisted from the applicants.It contains 3 teams from Malabar Hub, 15 teams from Kochi Hub and 7 teams from Travancore Hub. Among them 17 teams are attending Android Development and 8 teams are program started on 5th April 2020 and continues till 23rd August 2020. As an attending Raspberry Pi course. Each team is assigned with a mentor. The training outcome for this project, a Hackathon during WiES or as a prevent for WiES will be conducted. Every 3 weeks of the mentorship program an assessment task will be conducted, in order to know the followup.</p>
+			<hr class="style-two">
+		</div>	
+	</section>
+
+
+	<section class="adjusttop">
+		<div id="container" class="container">
+			<h4>Venus – The Epitome of WiEnes</h4>
+			<h5>Date: March 7-13,2020</h5>
+			<h4>No. of Participants: Various SBs and IEEE susections</h4>
+			<p>Venus - The epitome of WIEness, the WiE week celebration was observed from March 7 - March 13, 2020. The event bought all the Women's day celebrations under a singlke structure, the Venus. The week was dedicated to the celebrate womne's achievements in the social, economic, cultural and political spheres.</p>
+			<p>The IEEE WiE Community focused on conducting outreach programs at SB Levels, unfortunately many could'nt complete due to hit by the pandemic COVID 19. Many of the structured WiE week celebrations were then conducted using online platforms.</p>
+			<p>Venus have jhelped girls in excelling in practical living from the classroom to the outer world. This is donw by providing female student with education, exposure and experience. The gender gap that still persists in the cosiety can only be minimized through such events. the outreach programs have significantly helped the women out there in the society, which turns out to be the highlight of the values.</p>
+			<hr class="style-two">
+		</div>	
+	</section>
+
+
+	<section class="adjustbottom">
+		<div class="container" id="container">
+			<div class="card-group">
+			  <div class="card">
+			    <img class="card-img-top"  src="https://s3.ap-south-1.amazonaws.com/yepdesk-profile-images/prod/KPVU78MI_normal.jpeg" alt="Card image cap">
+			    <div class="card-body">
+			      <h5 class="card-title"><a href="https://ieee-link.org/category/malabar-hub/">Report</a></h5>
+			    </div>
+			  </div>
+			  <div class="card">
+			    <img class="card-img-top" id="image" src="https://s3.ap-south-1.amazonaws.com/yepdesk-profile-images/prod/PYMJCLKJ_normal.jpeg" alt="Card image cap">
+			    <div class="card-body">
+			      <h5 class="card-title"><a href="https://ieee-link.org/category/kochi-hub/">Report</a></h5>
+			    </div>
+			  </div>
+			  <div class="card">
+			    <img class="card-img-top" id="image" src="https://s3.ap-south-1.amazonaws.com/yepdesk-profile-images/prod/RGVHJQBR_normal.jpeg" alt="Card image cap">
+			    <div class="card-body">
+			      <h5 class="card-title"><a href="https://ieee-link.org/category/travancore-hub/">Report</a></h5>
+			    </div>
+			  </div>
+			</div>		
+		</div>
+	</section>
+
+
+
+
+
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
