Changes in index page and added 3 Hub pages

--- a/index.html
+++ b/index.html
@@ -8,30 +8,24 @@
 </head>
 <body>
 
-	
-
-	<div class="coverContainer">
-</div>
 
 
+	<div  class="masthead"></div>
 
-	<section class="adjusttop">
+
+	<section class="adjust">
 		<div id="container" class="container">
-			<h1 class="display-4">WIE team</h1>
-			<div class="und" style="margin-bottom: 10px">
-				<div class="ind"></div>
-			</div>
+			<h1 class="display-4 title-1">WIE TEAM</h1>
+			
 			<img class="center" src="Images/WieTeam.png" width="500px" height="500px">
 		</div>	
 	</section>
 
 
-	<section class="adjusttop">
+	<section class="adjustbottom">
 		<div id="container" class="container">
-			<h1 class="display-4">IEEE LINK</h1>
-			<div class="und" style="margin-bottom: 10px">
-				<div class="ind"></div>
-			</div>
+			<h1 class="display-4 title-1">IEEE LINK</h1>
+			
 			<h4>WiE Colloquium Phase</h4>
 			<h3>Date: 30th April - 9th May, 2020</h3>
 			<h4>No. of Participants: 300+</h4>
@@ -45,7 +39,7 @@
 
 
 
-	<section class="adjusttop">
+	<section class="adjustbottom">
 		<div id="container" class="container">
 			<h4>WiE Learn</h4>
 			<h5>Date: 5th April - 23rd October,2020</h5>
@@ -61,7 +55,7 @@
 	</section>
 
 
-	<section class="adjusttop">
+	<section class="adjustbottom">
 		<div id="container" class="container">
 			<h4>Venus – The Epitome of WiEnes</h4>
 			<h5>Date: March 7-13,2020</h5>
@@ -75,24 +69,27 @@
 
 
 	<section class="adjustbottom">
+		<div id="container" class="container">
+			<h1 class="display-4 title-1">LINK REPORTS</h1>
+		</div>	
 		<div class="container" id="container">
 			<div class="card-group">
 			  <div class="card">
 			    <img class="card-img-top"  src="https://s3.ap-south-1.amazonaws.com/yepdesk-profile-images/prod/KPVU78MI_normal.jpeg" alt="Card image cap">
 			    <div class="card-body">
-			      <h5 class="card-title"><a href="https://ieee-link.org/category/malabar-hub/">Report</a></h5>
+			      <h5 class="card-title"><a href="Hub_Pages/MalabarHub.html">Report</a></h5>
 			    </div>
 			  </div>
 			  <div class="card">
 			    <img class="card-img-top" id="image" src="https://s3.ap-south-1.amazonaws.com/yepdesk-profile-images/prod/PYMJCLKJ_normal.jpeg" alt="Card image cap">
 			    <div class="card-body">
-			      <h5 class="card-title"><a href="https://ieee-link.org/category/kochi-hub/">Report</a></h5>
+			      <h5 class="card-title"><a href="Hub_Pages/KochiHub.html">Report</a></h5>
 			    </div>
 			  </div>
 			  <div class="card">
 			    <img class="card-img-top" id="image" src="https://s3.ap-south-1.amazonaws.com/yepdesk-profile-images/prod/RGVHJQBR_normal.jpeg" alt="Card image cap">
 			    <div class="card-body">
-			      <h5 class="card-title"><a href="https://ieee-link.org/category/travancore-hub/">Report</a></h5>
+			      <h5 class="card-title"><a href="Hub_Pages/TravancoreHub.html">Report</a></h5>
 			    </div>
 			  </div>
 			</div>		
@@ -100,6 +97,33 @@
 	</section>
 
 
+
+
+	<section class="adjustbottom">
+		<div id="container" class="container">
+			<h1 class="display-4 title-1">ACHIEVEMENTS</h1>
+			<img class="center" src="Images/Achievements.png" >
+		</div>	
+	</section>
+
+
+
+
+	<section class="adjustbottom">
+		<div id="container" class="container">
+			<h1 class="display-4 title-1">CONTENT TEAM</h1>
+			<img class="center" src="Images/ContentTeam.png">
+		</div>	
+	</section>
+
+
+
+	<section class="adjustbottom">
+		<div id="container" class="container">
+			<h1 class="display-4 title-1">DESIGN TEAM</h1>
+			<img class="center" src="Images/DesignTeam.png">
+		</div>	
+	</section>
 
 
 
