--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div id="container" class="container">
 			<h1 class="display-4 title-1">WIE TEAM</h1>
 			
-			<img class="center" src="Images/WieTeam.png" width="500px" height="500px">
+			<img  class="center img-thumbnail img-fluid" src="Images/WieTeam.png" width="500px" height="500px">
 		</div>	
 	</section>
 
@@ -77,19 +77,22 @@
 			  <div class="card">
 			    <img class="card-img-top"  src="https://s3.ap-south-1.amazonaws.com/yepdesk-profile-images/prod/KPVU78MI_normal.jpeg" alt="Card image cap">
 			    <div class="card-body">
-			      <h5 class="card-title"><a href="Hub_Pages/MalabarHub.html">Report</a></h5>
+			    	<h3 class="title-underline load-and-show" data-toggle="modal" data-target="#Malabar">Malabar Hub</h3>
+			    	<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Malabar">Report</button> -->
 			    </div>
 			  </div>
 			  <div class="card">
 			    <img class="card-img-top" id="image" src="https://s3.ap-south-1.amazonaws.com/yepdesk-profile-images/prod/PYMJCLKJ_normal.jpeg" alt="Card image cap">
 			    <div class="card-body">
-			      <h5 class="card-title"><a href="Hub_Pages/KochiHub.html">Report</a></h5>
+			    	<h3 class="title-underline load-and-show" data-toggle="modal" data-target="#Kochi">Kochi Hub</h3>
+			    	<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Kochi">Report</button> -->
 			    </div>
 			  </div>
 			  <div class="card">
 			    <img class="card-img-top" id="image" src="https://s3.ap-south-1.amazonaws.com/yepdesk-profile-images/prod/RGVHJQBR_normal.jpeg" alt="Card image cap">
 			    <div class="card-body">
-			      <h5 class="card-title"><a href="Hub_Pages/TravancoreHub.html">Report</a></h5>
+			    	<h3 class="title-underline load-and-show" data-toggle="modal" data-target="#Travancore">Travancore Hub</h3>
+					<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Travancore">Report</button> -->
 			    </div>
 			  </div>
 			</div>		
@@ -99,10 +102,106 @@
 
 
 
+	<!-- Modal Malabar -->
+<section>
+<div class="container center">
+<!-- Modal -->
+<div class="modal fade" id="Malabar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p> Malabar Hub Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+	</div>
+	
+</section>
+
+
+
+
+
+		<!-- Modal Kochi -->
+<section>
+<div class="container center">
+<!-- Modal -->
+<div class="modal fade" id="Kochi" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Kochi Hub Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+	</div>
+	
+</section>
+
+
+
+
+
+	<!-- Modal Travancore -->
+<section>
+<div class="container center">
+<!-- Modal -->
+<div class="modal fade" id="Travancore" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Travancore Hub Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+	</div>
+	
+</section>
+
+
+
+
+
 	<section class="adjustbottom">
 		<div id="container" class="container">
 			<h1 class="display-4 title-1">ACHIEVEMENTS</h1>
-			<img class="center" src="Images/Achievements.png" >
+			<img class="center img-thumbnail img-fluid" src="Images/Achievements.png" >
 		</div>	
 	</section>
 
@@ -112,7 +211,7 @@
 	<section class="adjustbottom">
 		<div id="container" class="container">
 			<h1 class="display-4 title-1">CONTENT TEAM</h1>
-			<img class="center" src="Images/ContentTeam.png">
+			<img class="center img-thumbnail img-fluid" src="Images/ContentTeam.png">
 		</div>	
 	</section>
 
@@ -121,7 +220,7 @@
 	<section class="adjustbottom">
 		<div id="container" class="container">
 			<h1 class="display-4 title-1">DESIGN TEAM</h1>
-			<img class="center" src="Images/DesignTeam.png">
+			<img class="center img-thumbnail img-fluid" src="Images/DesignTeam.png">
 		</div>	
 	</section>
 
