--- a/works.html
+++ b/works.html
@@ -11,8 +11,7 @@
         <section class="intro">
             <div class="inner">
                 <div class="content">
-                    <h1>COLLEGE NAME OF ENGINEERING DISTRICT</h1>
-                    <h2>HUB NAME</h2><br>
+                    <h1>IEEE LINK</h1>
                     <a class="btn" href="#start">View Works</a>
                 </div>
                 
